<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name">Simple Recipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Simple Recipe</string>
    <string name="nav_header_subtitle">Your personal recipe book</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">My recipe</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_shopping">Shopping list</string>
    <string name="menu_setting">Setting</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favourite">Favourite</string>
    <string name="recipeEditName">Recipe Editor</string>
    <string name="extra_comments">Extra Comments</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="cooking_steps">Cooking steps</string>
    <string name="serving">Serving</string>
    <string name="add_photo">Add Photo</string>
    <string name="description">Description</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="recipeDetails">Recipe Details</string>
    <string name="amount">Amount</string>
    <string name="ingredient">Ingredient</string>
    <string name="action_search">Search</string>
    <string name="servings">Servings:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="recipe_details">Recipe details</string>
    <string name="confirm_delete">Are you sure you want to delete </string>
    <string name="yes">Yes</string>
    <string name="deleted">Deleted</string>
    <string name="no">No</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="from_existing_files">From existing files</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="confirm_delete_photo">Do you want to remove the photo</string>
    <string name="empty_shopping">The shopping cart is currently empty</string>
    <string name="export_desc">Use this for file back up, data transfer to a new device, or to share recipe</string>
    <string name="import_desc">Import a text file generated by this app to add all its recipes into your device. This will not alter any of your existing recipes.</string>
    <string name="setting">Setting</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="export_as_text_file">Export as text file</string>
    <string name="light_mode">Light theme</string>
    <string name="import_a_text_file">Import a text file</string>
    <string name="dark_mode">Dark theme</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="add_more_ingredients">Add more ingredients</string>
    <string name="egg">egg</string>
    <string name="salt">tsbp salt</string>
    <string name="your_recipe_name">Your recipe name</string>
    <string name="short_desc">Short description about the recipe...</string>
    <string name="clear_cart">Clear shopping cart</string>
    <string name="export_as_txt">Export as txt</string>
    <string name="import_a_txt">Import a txt</string>
    <string name="language_name">English</string>

    <string-array name="Language">
        <item></item>
        <item>English</item>
        <item>Chinese (Traditional)</item>
        <item>Japanese</item>
        <item>Spanish</item>

    </string-array>
</resources>