<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeEdit"
    >

    <include
        android:id="@+id/detailBar"
        layout="@layout/edit_actionbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detailBar"
        android:padding="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editshape"
                android:hint="@string/recipe_name"
                android:textColor="@color/edittext"
                />

            <EditText
                android:id="@+id/edtDesc"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/edtName"
                android:layout_marginTop="10dp"
                android:background="@drawable/editshape"
                android:hint="@string/description"
                android:textColor="@color/edittext"/>


            <ImageView
                android:id="@+id/imgPhoto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/edtDesc"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:id="@+id/btnPhotoDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtDesc"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/imgPhoto"
                android:src="@drawable/ic_redcross"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtDesc"
                android:layout_toRightOf="@+id/imgPhoto">

                <Button
                    android:id="@+id/btnAddPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="60dp"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/add_photo"
                    android:textAllCaps="false" />

                <ImageView
                    android:id="@+id/btnFavourite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_below="@+id/btnAddPhoto"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_heart_border"
                    app:tint="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnFavourite"
                    android:layout_centerHorizontal="true"
                    android:text="Add to favourite" />

            </RelativeLayout>


            <EditText
                android:id="@+id/edtServing"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/imgPhoto"
                android:layout_marginTop="10dp"
                android:background="@drawable/editshape"
                android:hint="@string/serving"
                android:inputType="number"
                android:textColor="@color/edittext" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientRecylerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edtServing"
                android:layout_marginTop="10dp">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/btnAddIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ingredientRecylerView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/secondary"
                android:text="Add more ingredients"
                android:textAllCaps="false" />


            <EditText
                android:id="@+id/edtSteps"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@+id/btnAddIngredient"
                android:layout_marginTop="10dp"
                android:background="@drawable/editshape"
                android:hint="@string/cooking_steps"
                android:textColor="@color/edittext"/>

            <EditText
                android:id="@+id/edtComments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/edtSteps"
                android:layout_marginTop="10dp"
                android:background="@drawable/editshape"
                android:hint="@string/extra_comments"
                android:textColor="@color/edittext"/>

            <Button
                android:id="@+id/btnAddRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtComments"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/secondary"
                android:text="@string/add_recipe"
                android:textAllCaps="false" />

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>